# morethanclock

cad/: baseplate.FCStd
dcf77clock/: Readme.md  dcf77clock.ino
dcf77v2/: receiver.py
dcf77v2/cc/: receiver.c  receiver.py
dcf77v2/pico/: receiver.py
dcf77v2/picocc/: CMakeLists.txt  dcf77.c
dcf77v2/simulator/: simulator.py
doc/latex/: circuit.tex
lcdtest/: lcdtest.ino
morethanclock/: Readme.md  morethanclock.ino
wlanclock/: Makefile  morethanclock.ino  wlanclock.ino
